--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.4",
     "eslint": "^4.19.0",
     "express": "^4.16.3",
+    "mongodb": "^3.0.4",
+    "mongoose": "^5.0.11",
     "morgan": "^1.9.0",
     "nodemon": "^1.17.2"
   },
