--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.3",
     "mongodb": "^3.0.4",
     "mongoose": "^5.0.11",
+    "mongoose-unique-validator": "^2.0.0",
     "morgan": "^1.9.0",
     "nodemon": "^1.17.2"
   },
