--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.2",
+    "bcrypt": "^3.0.0",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "eslint": "^4.19.0",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongodb": "^3.0.4",
     "mongoose": "^5.0.11",
     "mongoose-unique-validator": "^2.0.0",
